--- a/FlickMeter.Web/FlickMeter.Web.csproj
+++ b/FlickMeter.Web/FlickMeter.Web.csproj
@@ -152,6 +152,7 @@
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\bootswatch.bootstrap.min.css" />
     <Content Include="Content\css\loading-bar.min.css" />
+    <Content Include="Content\images\default.jpg" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
