--- a/FlickMeter.Data/FlickMeter.Data.csproj
+++ b/FlickMeter.Data/FlickMeter.Data.csproj
@@ -39,11 +39,13 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WebMatrix.WebData, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\AppUser.cs" />
@@ -52,6 +54,7 @@
     <Compile Include="Entities\MovieArtist.cs" />
     <Compile Include="Entities\MovieReview.cs" />
     <Compile Include="Entities\Reviewer.cs" />
+    <Compile Include="Entities\UserProfile.cs" />
     <Compile Include="Enums\AritstRole.cs" />
     <Compile Include="Enums\Genre.cs" />
     <Compile Include="Enums\Language.cs" />
@@ -64,6 +67,7 @@
     <Compile Include="Mappers\MovieMapper.cs" />
     <Compile Include="Mappers\MovieReviewMapper.cs" />
     <Compile Include="Mappers\ReviewerMapper.cs" />
+    <Compile Include="Mappers\UserProfileMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
